# Agents

./: .gitignore
job-hunter/: .env.example  .gitignore  CHANGELOG.md  README.md  job-hunt-copilot-v1-HLD.md  pyproject.toml
job-hunter/.specify/: feature.json
job-hunter/.specify/integrations/: claude.manifest.json  speckit.manifest.json
job-hunter/.specify/memory/: constitution.md
job-hunter/.specify/templates/: tasks-template.md
job-hunter/.specify/workflows/: workflow-registry.json
job-hunter/.tmp-jobhunter-verify/: jobs.db  prefs.yaml
job-hunter/specs/001-resume-profile-prefs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
job-hunter/specs/002-job-discovery-dedup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
job-hunter/specs/003-job-scoring-filtering/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
job-hunter/specs/004-orchestrator-run/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
job-hunter/src/jobhunter/: __init__.py  cli.py  config.py  http.py  obs.py
job-hunter/src/jobhunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
job-hunter/tests/: conftest.py
job-hunter/tests/fixtures/: adzuna_response.json  claude_profile_response.json  fake_sources.py  jsearch_response.json  scoring_jobs.json  scoring_prefs.yaml  scoring_profile.json  source_dupe_pair.json
job-hunter/tests/integration/: test_db_roundtrip.py  test_discover_idempotent.py  test_discover_resilience.py  (+8 more)
web-researcher/: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
web-researcher/tests/: test_fetch.py  test_report.py  test_search.py
(+120 files in other folders)
