[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobhunter"
version = "0.1.0"
description = "Local resume/profile/preferences copilot foundation (M1)"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=4",
    "PyYAML>=6",
    "pydantic>=2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "jsonschema>=4",
]

[project.scripts]
jobhunter = "jobhunter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# --- T003: linting / formatting ---
[tool.ruff]
src = ["src", "tests"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# --- T003: pytest config ---
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
